--- a/gaeia-web/src/layouts/BaseLayout.astro
+++ b/gaeia-web/src/layouts/BaseLayout.astro
@@ -138,5 +138,9 @@ const { title, description = 'GAEIA - Guia de Aprendizado em Engenharia de IA' }
         }
       });
     </script>
+
+    <script>
+      import '../scripts/progress-hydrator';
+    </script>
   </body>
 </html>
